aboutus page update for new content

--- a/i18n/locales/en/common.json
+++ b/i18n/locales/en/common.json
@@ -71,6 +71,11 @@
     "card_text_3": "Stay ahead with flexible staffing and expert support that adapts to your needs. Whether scaling teams or solving technical challenges, we provide the right people and tools to keep your business moving forward."
   },
   "aboutus": {
+    "banner_heading": "ABOUT US",
+    "banner_text": "We combines expertise in management consulting and implementation of business applications",
+    
+    "contactheading": "Get in Touch",
+
     "expertise_heading_1": "Supply Chain Services",
     "expertise_text_1": "Streamlining logistics and operations for faster, smarter delivery.",
 
@@ -83,10 +88,29 @@
     "expertise_heading_4": "Staffing and Support",
     "expertise_text_4": "Flexible talent and technical support to keep you running strong.",
 
+    "our_vision_heading": "Our Vision for the Future",
+    "our_vision_text": "Technology never stands still, and neither do we. We continuously invest in the latest tools, frameworks, and innovations—from AI integrations to cloud solutions and process automation—helping businesses stay ahead. With a global perspective and local commitment, we serve clients across industries—from startups and SMEs to established enterprises. Our goal is straightforward: to deliver digital solutions that make businesses stronger, smarter, and more successful, at a price that fits every budget.",
+
+    "process_flow_heading": "Our Expertise",
     "heading_1": "About Us | IT Solutions Worldwide",
     "text_1": "We combines expertise in management consulting and implementation of business applications",
     "heading_2": "Who We Are",
-    "text_2": "IT Solutions Worldwide is a leading company that provides the best-updated solutions to a comprehensive range of industries. With X years of experience, we aim to implement simple and innovative tech solutions to help achieve businesses greater success with greater efficiency. With a proven success record, we optimize businesses through supply chain management, IT support, digital marketing services, and operational excellence. We help modernize businesses with our best technical professionals available."
+    "text_2": "IT Solutions Worldwide is a leading company that provides the best-updated solutions to a comprehensive range of industries. With X years of experience, we aim to implement simple and innovative tech solutions to help achieve businesses greater success with greater efficiency. With a proven success record, we optimize businesses through supply chain management, IT support, digital marketing services, and operational excellence. We help modernize businesses with our best technical professionals available.",
+
+    "faq_title": "Frequently asked questions",
+    "faq_desc": "Feel free to make a call to our customer support helpline.",
+    "question1": "What does your company do?",
+    "answer1": "We provide various services, including Supply Chain Management, CRM, ERP, Logistics, IT Support, and Cloud Services. We aim to help businesses improve efficiency, increase growth, and achieve long-term success with customized solutions and expert guidance.",
+    "question2": "What industries do you serve?",
+    "answer2": "We work with businesses in various industries, including healthcare, manufacturing, supply chain management, technology, logistics, and finance.",
+    "question3": "How can I get in touch with you?",
+    "answer3": "You can email us at  info@itsolutionsworldwide.com or call us at +31 10 766 0786. We are always ready to assist you!",
+    "question4": "Do you offer ongoing support after service delivery?",
+    "answer4": "Yes, we offer regular, ongoing support after a project's completion and delivery to ensure seamless work operations and long-term success.",
+    "question5": "Do you provide consultations before starting a project?",
+    "answer5": "Absolutely! We offer consultations to analyze and understand your requirements, goals, and challenges so we can provide you with the best solutions.",
+    "question6": "How can I learn more about your services?",
+    "answer6": "To explore more about our services, please visit our website https://itsolutionsworldwide.com or feel free to contact us directly for more detailed information."
   },
   "contactus": {
     "heading_1": "Contact Us | IT Solutions Worldwide",
